# generative-matter

./: Cargo.toml  Makefile  README.md
src/: capture.rs  compute.rs  main.rs  particles.rs  radix_sort.rs  render.rs  uniforms.rs  util.rs
src/shaders/: bins.frag  comp.spv  count.comp  cs.wgsl  reorder.comp  scan.comp  scan_work_efficient.comp  shader.comp  shader.frag  update.comp
