[package]
name = "generative-matter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.19"
glsl-layout = "0.4.0"
nannou = { version = "0.18.1", features = ["spirv"] }
rand = "0.7.3"
shaderc = "0.6"
